--- a/website/src/App.css
+++ b/website/src/App.css
@@ -421,6 +421,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   transition: 0.3s ease-in-out;
   text-align: center;
   z-index: 0;
+
 }
 .exec .nav.nav-pills .nav-link::before {
     content: "";
@@ -432,6 +433,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
     left: 0;
     z-index: -1;
     transition: 0.3s ease-in-out;
+    border-radius: 5px;
 }
 .exec .nav.nav-pills .nav-link.active::before {
     width: 100% !important;
