--- a/website/src/App.css
+++ b/website/src/App.css
@@ -263,7 +263,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 .banner {
   margin-top: 0;
   padding: 260px 0 100px 0;
-  background-image: url('../src/assets/Img/banner-bg.png');
+  background: linear-gradient(90.21deg, #fcddda -5.91%, #252424 -111.58%);
   background-position: top center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -272,7 +272,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   font-weight: 700;
   letter-spacing: 0.8px;
   padding: 8px 10px;
-  background: linear-gradient(90.21deg, rgba(170, 54, 124, 0.5) -5.91%, rgba(74, 47, 189, 0.5) 111.58%);
+  background: linear-gradient(90.21deg, #F4998D -5.91%, #F44E3F 111.58%);
   border: 1px solid rgba(255, 255, 255, 0.5);
   font-size: 20px;
   margin-bottom: 16px;
@@ -333,9 +333,14 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 .event {
   padding: 0 0 50px 0;
   position: relative;
+  background: linear-gradient(90.21deg, #fcddda -5.91%, #252424 -111.58%);
+  background-position: top center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  
 }
 .event-bx {
-  background: #151515;
+  background: #e75656;
   border-radius: 64px;
   text-align: center;
   padding: 60px 50px;
@@ -345,6 +350,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 .event h2 {
 	font-size: 45px;
 	font-weight: 700;
+  padding: 20px 0;
 }
 .event p {
     color: #B8B8B8;
@@ -382,7 +388,10 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 .exec {
   padding: 80px 0;
   position: relative;
-  background-color: black;
+  background: linear-gradient(90.21deg, #fcddda -5.91%, #252424 -111.58%);
+  background-blend-mode: 0;
+
+
 }
 .exec h2 {
 	font-size: 45px;
@@ -401,12 +410,12 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 .exec .nav.nav-pills {
   width: 72%;
   margin: 0 auto;
-  border-radius: 50px;
+  border-radius: 30px;
   background-color: rgb(255 255 255 / 10%);
   overflow: hidden;
 }
 .exec .nav.nav-pills .nav-item {
-  width: 33.33333%;
+  width: 50%;
 }
 .exec .nav.nav-pills .nav-link {
   background-color: transparent;
@@ -428,12 +437,13 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
     position: absolute;
     width: 0;
     height: 100%;
-    background: linear-gradient(90.21deg, #AA367C -5.91%, #4A2FBD 111.58%);
+    background: linear-gradient(90.21deg, #F4998D -5.91%, #F44E3F 111.58%);
     top: 0;
-    left: 0;
+    left: 50%;
+    transform: translateX(-50%);
     z-index: -1;
-    transition: 0.3s ease-in-out;
-    border-radius: 5px;
+    transition: width 0.4s ease-in-out;
+
 }
 .exec .nav.nav-pills .nav-link.active::before {
     width: 100% !important;
@@ -446,8 +456,8 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   border-radius: 55px 0px 0px 55px;
 }
 .nav-link#execs-tabs-tab-second {
-  border-top: 1px solid rgba(255, 255, 255, 0.5);
-  border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+  border: 1px solid rgba(255, 255, 255, 0.5);
+  border-radius: 0 55px 55px 0;
 }
 .ex-imgbx {
   position: relative;
@@ -457,8 +467,8 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 }
 .ex-imgbx::before {
   content: "";
-  background: linear-gradient(90.21deg, #AA367C -5.91%, #4A2FBD 111.58%);
-  opacity: 0.85;
+  background: linear-gradient(90.21deg, #F4998D -5.91%, #F44E3F 111.58%);
+  opacity: 0.3;
   position: absolute;
   width: 100%;
   height: 0;
@@ -504,7 +514,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 
 /************ Projects Css ************/
 .contact {
-  background: linear-gradient(90.21deg, #AA367C -5.91%, #4A2FBD 111.58%);
+  background: linear-gradient(90.21deg, #fcddda -5.91%, #252424 -111.58%);
   padding: 60px 0 200px 0;
 }
 .contact img {
@@ -605,7 +615,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 }
 .new-email-bx::before {
   content: "";
-  background: linear-gradient(90.21deg, #AA367C -5.91%, #4A2FBD 111.58%);
+  background: linear-gradient(90.21deg, #F4998D -5.91%, #F44E3F 111.58%);
   border-radius: 20px;
   position: absolute;
   z-index: -1;
@@ -634,12 +644,15 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   padding: 0 15px;
 }
 .new-email-bx button {
-  background: linear-gradient(90.21deg, #AA367C -5.91%, #4A2FBD 111.58%);
+  background: linear-gradient(90.21deg, #F4998D -5.91%, #F44E3F 111.58%);
   padding: 20px 65px;
   color: #fff;
   font-weight: 500;
   letter-spacing: 0.5px;
   border-radius: 18px;
+}
+.footer{
+  background: linear-gradient(90.21deg, #fcddda -5.91%, #252424 -111.58%);
 }
 .footer img {
   width: 26%;
